syntax = "proto3";

option csharp_namespace = "GrpcGreeter.Protos";
import "Protos/empty.proto";
import "Protos/skillCRUD.proto";

package protos.personCRUD;

service PersonCRUD {
  rpc GetPersons (empty.Empty) returns (Persons);
  rpc GetByID (PersonFilter) returns (Person);
  rpc Insert (Person) returns (empty.Empty);
  rpc Update (Person) returns (empty.Empty);
  rpc Delete (PersonFilter) returns (empty.Empty);
}

message Person {
  string firstName = 1;
  string lastName = 2;
  string id = 3;
  int32 age = 4;
  skillCRUD.Skill skill = 5;
}

message Persons {
  repeated Person items = 1;
}

message PersonFilter{
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  int32 age = 4;
  skillCRUD.Skill skill = 5;
}